Expand face sets freeze blender when cursor is on mesh boundaries #112664

Closed
opened 2023-09-21 12:44:32 +02:00 by David Kerdudo · 3 comments

System Information
Operating system: Linux (Mint 21)
Graphics card: RTX 3070 Ti

Blender Version
Broken: 4.0.0 alpha, 12f51bd1c7, master, 2023-09-21, as found on the splash screen)
Worked: 3.6
Short description of error

Try to create new face sets from first or last face loops on a cylinder.
But expand Face Set from boundaries is frozen in 4.0 alpha.

Exact steps for others to reproduce the error

  • Open the blend file

  • Switch to Sculpt mode

  • Move your cursor outside boundaries and press Expand Face Set (Shift +W). (See on pictures)

At this point, Blender freeze, not crash. No more info in console.

Bug :
image

Expected (3.6 version):
image

Thanks for your help.

**System Information** Operating system: Linux (Mint 21) Graphics card: RTX 3070 Ti **Blender Version** Broken: 4.0.0 alpha, 12f51bd1c77b, master, 2023-09-21, as found on the splash screen) Worked: 3.6 **Short description of error** Try to create new face sets from first or last face loops on a cylinder. But expand Face Set from boundaries is frozen in 4.0 alpha. **Exact steps for others to reproduce the error** - Open the blend file - Switch to Sculpt mode - Move your cursor outside boundaries and press Expand Face Set (Shift +W). (See on pictures) At this point, Blender freeze, not crash. No more info in console. Bug : ![image](/attachments/da93c804-9693-4acc-ac5d-a59233456bb1) Expected (3.6 version): ![image](/attachments/253897c5-a267-4c40-bdae-c8fd82c116c4) Thanks for your help.
David Kerdudo added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-21 12:44:33 +02:00
Member

Can confirm. But I don't think it should be described as "when cursor is outside boundaries", it seemed to me it should be "when cursor center is on the boundary vertex".

Can confirm. But I don't think it should be described as "when cursor is outside boundaries", it seemed to me it should be "when cursor center is on the boundary vertex".
YimingWu added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-22 04:41:13 +02:00
YimingWu changed title from Expand face sets freeze blender when cursor is outside boundaries to Expand face sets freeze blender when cursor is on mesh boundaries 2023-09-22 04:41:25 +02:00
Member

This hangs and never exits the loop while (!BLI_gsqueue_is_empty(queue)) { in sculpt_expand_boundary_topology_falloff_create. Likely a vertex tagging error or something.

This hangs and never exits the loop `while (!BLI_gsqueue_is_empty(queue)) {` in `sculpt_expand_boundary_topology_falloff_create`. Likely a vertex tagging error or something.
YimingWu added
Priority
High
and removed
Priority
Normal
labels 2023-09-22 04:45:53 +02:00
Member

Got a fix, will post PR shortly

Got a fix, will post PR shortly
Philipp Oeser self-assigned this 2023-09-22 09:37:57 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-22 14:53:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112664
No description provided.