Fix #112664: Expand face sets freeze when cursor is on mesh boundaries

Mistake/typo in f4505e7b0ac (not actually setting the bit).

Pull Request: https://projects.blender.org/blender/blender/pulls/112706