source/blender/editors/sculpt_paint/sculpt_expand.cc
@@ -676,7 +676,7 @@ static float *sculpt_expand_boundary_topology_falloff_create(Object *ob, const P
         continue;
       }
       dists[ni.index] = dists[v_next_i] + 1.0f;
-      visited_verts[ni.index];
+      visited_verts[ni.index].set();
       BLI_gsqueue_push(queue, &ni.vertex);
     }
     SCULPT_VERTEX_NEIGHBORS_ITER_END(ni);
